--- a/scss/left.scss
+++ b/scss/left.scss
@@ -1,4 +1,5 @@
 .open-left {
+  overflow: hidden;
   .app {
     position: relative;
     left: 0;
